tests/baselines/reference/typeofExternalModules.errors.txt
tests/cases/compiler/typeofExternalModules_core.ts(5,1): error TS2322: Type '类为 D' is not assignable to type '类为 "tests/cases/compiler/typeofExternalModules_external"'.
  Property 'C' is missing in type '类为 D'.
tests/cases/compiler/typeofExternalModules_core.ts(7,1): error TS2322: Type '类为 "tests/cases/compiler/typeofExternalModules_external"' is not assignable to type '类为 D'.
  Property 'prototype' is missing in type '类为 "tests/cases/compiler/typeofExternalModules_external"'.


==== tests/cases/compiler/typeofExternalModules_core.ts (2 errors) ====
    import ext = require('./typeofExternalModules_external');
    import exp = require('./typeofExternalModules_exportAssign');
    
    var y1: typeof ext = ext;
    y1 = exp;
    ~~
!!! error TS2322: Type '类为 D' is not assignable to type '类为 "tests/cases/compiler/typeofExternalModules_external"'.
!!! error TS2322:   Property 'C' is missing in type '类为 D'.
    var y2: typeof exp = exp;
    y2 = ext;
    ~~
!!! error TS2322: Type '类为 "tests/cases/compiler/typeofExternalModules_external"' is not assignable to type '类为 D'.
!!! error TS2322:   Property 'prototype' is missing in type '类为 "tests/cases/compiler/typeofExternalModules_external"'.
==== tests/cases/compiler/typeofExternalModules_external.ts (0 errors) ====
    export class C { }
    
==== tests/cases/compiler/typeofExternalModules_exportAssign.ts (0 errors) ====
    class D { }
    export = D;
    